--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
 body {
     background-color: rgb(226, 214, 214);
 }
@@ -7,15 +11,28 @@ header {
     align-items: center;
 }
 header img {
-    margin-right: 1em;
     height: 7em;
 }
 article {
     background-color: rgba(248, 247, 245, 0.678);
     margin: 1em;
-    padding: 1em;
     box-shadow: 5px 2px 10px rgba(104, 102, 102, 0.568);
 }
+article h1 {
+    padding: 1em;
+}
+p {
+    padding: 0 0.7em 1em;
+    font-size: 1.3em;
+}
+footer {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-around;
+    padding: 0.5em;
+    font-style: italic;
+}
+
 @media only screen and (min-width: 600px) {
     body {
         display: grid;
@@ -24,5 +41,8 @@ article {
     }
     header {
         grid-column: 1 / 3;
+    }
+    p {
+        padding: 0 1em 1em;
     }
 }
