--- a/style.css
+++ b/style.css
@@ -75,12 +75,12 @@ footer {
     }
     nav ul {
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
         list-style-type: none;
     }
     nav ul li {
         padding: 0 0.5em;
-        font-size: 1.5em;
+        font-size: 1.2em;
     }
     nav ul li a {
         color: black;
