--- a/style.css
+++ b/style.css
@@ -7,16 +7,16 @@ body {
     font-family: 'Roboto', sans-serif;
     color: black;
 }
-header {
+.main-header {
     border-bottom: 2px solid rgba(216, 213, 213, 0.699);
 }
-header div {
+.main-header div {
     text-align: center;
 }
-header div img {
+.main-header div img {
     padding: 0;
 }
-header div h1 {
+.main-header div h1 {
     margin-bottom: 0.5em;
     font-family: 'Karla', sans-serif;
     font-size: 3em;
@@ -33,21 +33,23 @@ nav ul {
 article {
     background-color: rgba(248, 247, 245, 0.678);
     margin: 1em;
-    box-shadow: 5px 2px 10px rgba(104, 102, 102, 0.568);
+    box-shadow: 1px 1px 5px rgba(104, 102, 102, 0.568);
 }
-article h1 {
-    padding: 1em;
+.article-header div {
+    display: inline-block;
+    font-style: italic;
+    padding: 0 0.3em 0.2em 0.3em;
+}
+.article-header > div {
+    border-bottom: 1px solid black;
+    margin: 0.5em 0 1em 1.5em;
+}
+.article-header h1 {
+    padding: 1em 0 0 1em;
 }
 p {
     padding: 0 0.7em 1em;
     font-size: 1.3em;
-}
-footer {
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-around;
-    padding: 0.5em;
-    font-style: italic;
 }
 
 @media only screen and (min-width: 700px) {
@@ -56,21 +58,21 @@ footer {
         grid-template-columns: 1fr 1fr;
         align-items: flex-start;
     }
-    header {
+    .main-header {
         grid-column: 1 / 3;
     }
     p {
         padding: 0 1em 1em;
     }
-    header nav img {
+    .main-header nav img {
         display: none;
     }
-    header div {
+    .main-header div {
         display: flex;
         justify-content: center;
         align-items: flex-end;
     }
-    header div h1 {
+    .main-header div h1 {
         font-size: 4em;
     }
     nav ul {
