--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ p {
     padding: 0 0.7em 1em;
     font-size: 1.3em;
 }
+.content {
+    display: none;
+}
 
 @media only screen and (min-width: 700px) {
     body {
