--- a/style.css
+++ b/style.css
@@ -51,8 +51,23 @@ p {
     padding: 0 0.7em 1em;
     font-size: 1.3em;
 }
-.content {
+.article-content {
+    height: 4.7em;
+    overflow: hidden;
+}
+.content-hide {
     display: none;
+}
+
+article a {
+    display: inline-block;
+    margin: 0.5em 0 1em 1em;
+    text-decoration: none;
+    font-size: 1.3em;
+}
+
+article a:hover {
+    color: rgb(216, 32, 32);
 }
 
 @media only screen and (min-width: 700px) {
