--- a/style.css
+++ b/style.css
@@ -76,14 +76,14 @@ article {
 .article-header div {
     display: inline-block;
     font-style: italic;
-    padding: 0 0.3em 0.2em 0.3em;
+    padding: 0 0.3em 0.2em 0em;
 }
 .article-header > div {
     border-bottom: 1px solid black;
-    margin: 0.5em 0 1em 1.5em;
+    margin: 0.5em 0 1em 1.4em;
 }
 .article-header h1 {
-    padding: 1em 0 0 1em;
+    padding: 1em 1em 0 1em;
 }
 p {
     padding: 0 0.7em 1em;
