--- a/style.css
+++ b/style.css
@@ -80,11 +80,16 @@ article {
     padding: 0 0.3em 0.2em 0em;
 }
 .article-header > div {
+    width: 70%;
     border-bottom: 1px solid black;
     margin: 0.5em 0 1em 1.4em;
 }
 .article-header h1 {
     padding: 1em 1em 0 1em;
+}
+.article-header a {
+    font-size: 1em;
+    font-style: italic;
 }
 p {
     padding: 0 0.7em 1em;
@@ -110,6 +115,7 @@ article figure > img {
     .main-grid-index {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        align-items: flex-start;
     }
 
     /* Main header */
