--- a/style.css
+++ b/style.css
@@ -102,11 +102,14 @@ article {
 .article-header a {
     font-style: italic;
 }
+.like-icon {
+    width: 20px;
+}
 p {
     padding: 0 0.7em 1em;
     font-size: 1.1em;
 }
-/* Show more or less content -> classes */
+/* Toggle between these classes to show more or less content */
 .article-content {
     height: 4.6em;
     overflow: hidden;
@@ -170,9 +173,8 @@ article figure > img {
     }
 }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 1000px) {
     .main-grid-index {
-        display: grid;
         grid-template-columns: 1fr 1fr 1fr;
     }
 
